--- a/world/map/db/item_db.conf
+++ b/world/map/db/item_db.conf
@@ -793,23 +793,28 @@ item_db: (
 	Buy: 8000
 	Sell: 4000
 	Weight: 1050
-	Atk: 161
-	Def: -2
+	Atk: 171
+	Def: 0
 	Range: 1
 	Slots: 1
 	Loc: "EQP_HAND_R"
-	WeaponLv: 1
-	EquipLv: 1
+	WeaponLv: 2
+	EquipLv: 99
 	Refine: false
 	ViewSprite: 1
 	Subtype: "W_1HSWORD"
+	OnEquipScript: <"
+		callfunc "RequireStat", bStr, 50, EQI_HAND_R;
+		callfunc "RequireStat", bAgi, 50, EQI_HAND_R;
+		callfunc "RequireStat", bVit, 50, EQI_HAND_R;
+		callfunc "RequireStat", bDex, 50, EQI_HAND_R;
+		callfunc "RequireStat", bLuk, 50, EQI_HAND_R;
+	">
 	Script: <"
-		bonus bMaxHP, -100;
-		bonus2 bHPDrainRate, 100, -1;
-		bonus bCriticalDef, -2;
 		bonus bStr, 5;
 		bonus bAspdRate, 2;
 		bonus bHit, 5;
+		//bonus bBaseWeaponDelayAdjust, -25; // @TMWA
 	">
 },
 {
