Dyable Savior Armor

--- a/world/map/db/item_db.conf
+++ b/world/map/db/item_db.conf
@@ -5309,6 +5309,28 @@ item_db: (
 	Refine: false
 	ViewSprite: 5297
 },
+{
+	Id: 5298
+	AegisName: "CloverDrawing"
+	Name: "Clover Drawing"
+	Type: "IT_ETC"
+	Buy: 0
+	Sell: 0
+	Weight: 10
+	Def: 0
+	Refine: false
+	ViewSprite: 5298
+	Trade: {
+		notrade: true
+		nodrop: true
+		nostorage: false
+		nogstorage: false
+		nomail: true
+		noauction: true
+		noselltonpc: true
+	}
+	//Disabled: true // @TMWA
+},
 /* Chest Armor */
 {
 	Id: 523
@@ -9664,6 +9686,206 @@ item_db: (
 	Nouse: {
 		override: 1
 	}
+},
+{
+	Id: 5299
+	AegisName: "RedSaviorArmor"
+	Name: "RedSaviorArmor"
+	Type: "IT_ARMOR"
+	Buy: 0
+	Sell: 0
+	Weight: 2000
+	Matk: -90
+	Def: 24
+	Slots: 0
+	Loc: "EQP_HEAD_MID"
+	Refine: false
+	ViewSprite: 5299
+	Script: <"
+		bonus bMatkRate, -90; // @EVOL2
+		bonus bDex, 1;
+		bonus bMaxHP, 100;
+	">
+},
+{
+	Id: 5300
+	AegisName: "GreenSaviorArmor"
+	Name: "GreenSaviorArmor"
+	Type: "IT_ARMOR"
+	Buy: 0
+	Sell: 0
+	Weight: 2000
+	Matk: -90
+	Def: 24
+	Slots: 0
+	Loc: "EQP_HEAD_MID"
+	Refine: false
+	ViewSprite: 5300
+	Script: <"
+		bonus bMatkRate, -90; // @EVOL2
+		bonus bDex, 1;
+		bonus bMaxHP, 100;
+	">
+},
+{
+	Id: 5301
+	AegisName: "DarkBlueSaviorArmor"
+	Name: "DarkBlueSaviorArmor"
+	Type: "IT_ARMOR"
+	Buy: 0
+	Sell: 0
+	Weight: 2000
+	Matk: -90
+	Def: 24
+	Slots: 0
+	Loc: "EQP_HEAD_MID"
+	Refine: false
+	ViewSprite: 5301
+	Script: <"
+		bonus bMatkRate, -90; // @EVOL2
+		bonus bDex, 1;
+		bonus bMaxHP, 100;
+	">
+},
+{
+	Id: 5302
+	AegisName: "YellowSaviorArmor"
+	Name: "YellowSaviorArmor"
+	Type: "IT_ARMOR"
+	Buy: 0
+	Sell: 0
+	Weight: 2000
+	Matk: -90
+	Def: 24
+	Slots: 0
+	Loc: "EQP_HEAD_MID"
+	Refine: false
+	ViewSprite: 5302
+	Script: <"
+		bonus bMatkRate, -90; // @EVOL2
+		bonus bDex, 1;
+		bonus bMaxHP, 100;
+	">
+},
+{
+	Id: 5303
+	AegisName: "LightBlueSaviorArmor"
+	Name: "LightBlueSaviorArmor"
+	Type: "IT_ARMOR"
+	Buy: 0
+	Sell: 0
+	Weight: 2000
+	Matk: -90
+	Def: 24
+	Slots: 0
+	Loc: "EQP_HEAD_MID"
+	Refine: false
+	ViewSprite: 5303
+	Script: <"
+		bonus bMatkRate, -90; // @EVOL2
+		bonus bDex, 1;
+		bonus bMaxHP, 100;
+	">
+},
+{
+	Id: 5304
+	AegisName: "PinkSaviorArmor"
+	Name: "PinkSaviorArmor"
+	Type: "IT_ARMOR"
+	Buy: 0
+	Sell: 0
+	Weight: 2000
+	Matk: -90
+	Def: 24
+	Slots: 0
+	Loc: "EQP_HEAD_MID"
+	Refine: false
+	ViewSprite: 5304
+	Script: <"
+		bonus bMatkRate, -90; // @EVOL2
+		bonus bDex, 1;
+		bonus bMaxHP, 100;
+	">
+},
+{
+	Id: 5305
+	AegisName: "BlackSaviorArmor"
+	Name: "BlackSaviorArmor"
+	Type: "IT_ARMOR"
+	Buy: 0
+	Sell: 0
+	Weight: 2000
+	Matk: -90
+	Def: 24
+	Slots: 0
+	Loc: "EQP_HEAD_MID"
+	Refine: false
+	ViewSprite: 5305
+	Script: <"
+		bonus bMatkRate, -90; // @EVOL2
+		bonus bDex, 1;
+		bonus bMaxHP, 100;
+	">
+},
+{
+	Id: 5306
+	AegisName: "OrangeSaviorArmor"
+	Name: "OrangeSaviorArmor"
+	Type: "IT_ARMOR"
+	Buy: 0
+	Sell: 0
+	Weight: 2000
+	Matk: -90
+	Def: 24
+	Slots: 0
+	Loc: "EQP_HEAD_MID"
+	Refine: false
+	ViewSprite: 5306
+	Script: <"
+		bonus bMatkRate, -90; // @EVOL2
+		bonus bDex, 1;
+		bonus bMaxHP, 100;
+	">
+},
+{
+	Id: 5307
+	AegisName: "PurpleSaviorArmor"
+	Name: "PurpleSaviorArmor"
+	Type: "IT_ARMOR"
+	Buy: 0
+	Sell: 0
+	Weight: 2000
+	Matk: -90
+	Def: 24
+	Slots: 0
+	Loc: "EQP_HEAD_MID"
+	Refine: false
+	ViewSprite: 5307
+	Script: <"
+		bonus bMatkRate, -90; // @EVOL2
+		bonus bDex, 1;
+		bonus bMaxHP, 100;
+	">
+},
+{
+	Id: 5308
+	AegisName: "DarkGreenSaviorArmor"
+	Name: "DarkGreenSaviorArmor"
+	Type: "IT_ARMOR"
+	Buy: 0
+	Sell: 0
+	Weight: 2000
+	Matk: -90
+	Def: 24
+	Slots: 0
+	Loc: "EQP_HEAD_MID"
+	Refine: false
+	ViewSprite: 5308
+	Script: <"
+		bonus bMatkRate, -90; // @EVOL2
+		bonus bDex, 1;
+		bonus bMaxHP, 100;
+	">
 },
 //////////////////////////////////////////////////////////
 // Hats
