--- a/world/map/db/item_db.conf
+++ b/world/map/db/item_db.conf
@@ -14101,9 +14101,9 @@ item_db: (
 	AegisName: "PinkPetal"
 	Name: "PinkPetal"
 	Type: "IT_USABLE"
-	Buy: 100
+	Buy: 125
 	Sell: 50
-	Weight: 10
+	Weight: 5
 	Def: 0
 	Slots: 0
 	Refine: false
@@ -14119,7 +14119,7 @@ item_db: (
 	Type: "IT_USABLE"
 	Buy: 125
 	Sell: 50
-	Weight: 10
+	Weight: 5
 	Def: 0
 	Slots: 0
 	Refine: false
@@ -15538,6 +15538,38 @@ item_db: (
 		//callfunc("SC_Bonus", 60, SC_PHYS_SHIELD, 40); //@EVOL2
 		//callfunc("SC_Bonus", 60000, SC_PHYS_SHIELD, 40); //@TMWA
 		//misceffect FX_MAGIC_SHIELD, strcharinfo(0); //@TMWA
+	">
+},
+{
+	Id: 5309
+	AegisName: "ManaDust"
+	Name: "ManaDust"
+	Type: "IT_USABLE"
+	Buy: 125
+	Sell: 50
+	Weight: 5
+	Def: 0
+	Slots: 0
+	Refine: false
+	ViewSprite: 5309
+	Script: <"
+		callfunc "itheal", 35, 15;
+	">
+},
+{
+	Id: 5310
+	AegisName: "EnlighteningElixir"
+	Name: "EnlighteningElixir"
+	Type: "IT_USABLE"
+	Buy: 500
+	Sell: 250
+	Weight: 10
+	Def: 0
+	Slots: 0
+	Refine: false
+	ViewSprite: 5309
+	Script: <"
+		callfunc("SC_Bonus", 60, SC_PLUSMAGICPOWER, 100);
 	">
 },
 
