--- a/world/map/db/mob_db.conf
+++ b/world/map/db/mob_db.conf
@@ -1304,6 +1304,7 @@ mob_db: (
 	MutationStrength: 50
 	Drops: {
 		IronPotion: 800
+		EnlighteningElixir: 800
 		ConcentrationPotion: 800
 		Diamond: 50
 	}
@@ -1596,6 +1597,8 @@ mob_db: (
 		RedApple: 500
 		EmptyBottle: 10
 		OrangeCupcake: 100
+		CoinBag: 400
+		SmallMushroom: 1000
 		SmallMushroom: 1000
 	}
 },
@@ -5515,6 +5518,7 @@ mob_db: (
 		Bone: 400
 		Skull: 300
 		IronPowder: 100
+		EnlighteningElixir: 1200
 		GoldenTooth: 20
 	}
 },
@@ -5672,6 +5676,8 @@ mob_db: (
 		DarkCrystal: 40
 		Bloodstone: 700
 		DarkCrystal: 800
+		EnlighteningElixir: 1600
+		ManaDust: 10000
 	}
 },
 {
@@ -7571,6 +7577,7 @@ mob_db: (
 	DamageMotion: 480
 	Drops: {
 		IronPotion: 800
+		EnlighteningElixir: 800
 		ConcentrationPotion: 800
 		Diamond: 50
 	}
@@ -7582,20 +7589,20 @@ mob_db: (
 	Lv: 100
 	Hp: 35000
 	Sp: 0
-	Exp: 28970
-	JExp: 1689
-	AttackRange: 3
-	Attack: [60, 80]
-	Def: 20
-	Mdef: 20
+	Exp: 88970
+	JExp: 2689
+	AttackRange: 4
+	Attack: [220, 240]
+	Def: 77
+	Mdef: 50
 	CriticalDef: 0
 	Stats: {
-		Str: 15
-		Agi: 15
-		Vit: 10
-		Int: 15
-		Dex: 95
-		Luk: 50
+		Str: 45
+		Agi: 20
+		Vit: 110
+		Int: 150
+		Dex: 255
+		Luk: 110
 	}
 	ViewRange: 14
 	ChaseRange: 16
@@ -7615,9 +7622,10 @@ mob_db: (
 	AttackMotion: 672
 	DamageMotion: 480
 	Drops: {
-		IronPotion: 800
-		ConcentrationPotion: 800
-		Diamond: 50
+		IronPotion: 1600
+		EnlighteningElixir: 1600
+		ConcentrationPotion: 1600
+		Diamond: 100
 	}
 },
 {
@@ -7936,6 +7944,56 @@ mob_db: (
 	Drops: {
 		Boots: 5000
 		LeatherGloves: 200
+	}
+},
+{
+	Id: 1175
+	SpriteName: "MegaManaBug"
+	Name: "MegaManaBug"
+	Lv: 111
+	Hp: 675
+	Sp: 0
+	Exp: 275
+	JExp: 40
+	AttackRange: 1
+	Attack: [60, 85]
+	Def: 3
+	Mdef: 8
+	CriticalDef: 0
+	Stats: {
+		Str: 16
+		Agi: 14
+		Vit: 15
+		Int: 20
+		Dex: 30
+		Luk: 30
+	}
+	ViewRange: 9
+	ChaseRange: 10
+	Size: 1
+	Race: 3
+	Element: (2, 1)
+	Mode: {
+		CanMove: true
+		Assist: true
+		CanAttack: true
+		ChangeTargetMelee: true
+		ChangeTargetChase: true
+	}
+	MoveSpeed: 800
+	AttackDelay: 1800
+	AttackMotion: 672
+	DamageMotion: 480
+	MutationCount: 1
+	MutationStrength: 60
+	Drops: {
+		MaggotSlime: 1000
+		BugLeg: 800
+		RoastedMaggot: 400
+		EmptyBottle: 10
+		CoinBag: 400
+		ManaDust: 1000
+		ManaDust: 1000
 	}
 },
 )
