Lowered speed and dex penalty, added m attk and def

--- a/world/map/db/item_db.conf
+++ b/world/map/db/item_db.conf
@@ -13133,8 +13133,10 @@ item_db: (
 	Refine: false
 	ViewSprite: 5130
 	Script: <"
-		bonus bAspdRate, 30;
-		bonus bDex, -(readparam(bDex)/2);
+		bonus bAspdRate, 25;
+		bonus bDex, -(readparam(bDex)/3);
+		bonus bMatkRate, 90; // @EVOL2
+		bonus bMdef, 20;
 	">
 },
 {
