--- a/world/map/db/item_db.conf
+++ b/world/map/db/item_db.conf
@@ -13127,14 +13127,17 @@ item_db: (
 	Buy: 50000
 	Sell: 10000
 	Weight: 20
+	Matk: 90
 	Def: 1
 	Slots: 0
 	Loc: "EQP_HEAD_TOP"
 	Refine: false
 	ViewSprite: 5130
 	Script: <"
-		bonus bAspdRate, 30;
-		bonus bDex, -(readparam(bDex)/2);
+		bonus bAspdRate, 25;
+		bonus bDex, -(readparam(bDex)/3);
+		bonus bMatkRate, 90; // @EVOL2
+		bonus bMdef, 20;
 	">
 },
 {
