Forgot to make Rot aggressive

--- a/world/map/db/mob_db.conf
+++ b/world/map/db/mob_db.conf
@@ -8054,8 +8054,8 @@ mob_db: (
 	Lv: 100
 	Hp: 13
 	Sp: 0
-	Exp: 3
-	JExp: 0
+	Exp: 11
+	JExp: 1
 	AttackRange: 1
 	Attack: [111, 333]
 	Def: 0
@@ -8075,16 +8075,14 @@ mob_db: (
 	Race: 0
 	Element: (1, 1)
 	Mode: {
+		Aggressive: true
 		CanAttack: true
 		ChangeTargetMelee: true
 		ChangeTargetChase: true
 		SurviveWithoutMaster: true
 	}
-	MoveSpeed: 800
-	AttackDelay: 800
+	AttackDelay: 500
 	AttackMotion: 672
 	DamageMotion: 480
-	MutationCount: 0
-	MutationStrength: 0
 }
 )
