--- a/world/map/db/mob_db.conf
+++ b/world/map/db/mob_db.conf
@@ -7996,4 +7996,93 @@ mob_db: (
 		ManaDust: 1000
 	}
 },
+{
+	Id: 1176
+	SpriteName: "Rotter"
+	Name: "Rotter"
+	Lv: 130
+	Hp: 6000
+	Sp: 0
+	Exp: 5533
+	JExp: 733
+	AttackRange: 7
+	Attack: [213, 333]
+	Def: 20
+	Mdef: 25
+	CriticalDef: 50
+	Stats: {
+		Str: 30
+		Agi: 15
+		Vit: 30
+		Int: 11
+		Dex: 100
+		Luk: 113
+	}
+	ViewRange: 3
+	ChaseRange: 12
+	Size: 1
+	Race: 1
+	Element: (7, 1)
+	Mode: {
+		CanMove: true
+		Aggressive: true
+		Assist: true
+		CanAttack: true
+		ChangeTargetMelee: true
+		ChangeTargetChase: true
+		Detector: true
+	}
+	MoveSpeed: 273
+	AttackDelay: 2222
+	AttackMotion: 672
+	DamageMotion: 900
+	MutationCount: 2
+	MutationStrength: 30
+	Drops: {
+		DarkCrystal: 1000
+		RottenRags: 800
+		DiseasedHeart: 200
+		UndeadEar: 500
+		Soul: 500
+		GoldenTooth: 10
+	}
+},
+{
+	Id: 1177
+	SpriteName: "Rot"
+	Name: "Rot"
+	Lv: 100
+	Hp: 13
+	Sp: 0
+	Exp: 11
+	JExp: 1
+	AttackRange: 1
+	Attack: [111, 333]
+	Def: 0
+	Mdef: 0
+	CriticalDef: 0
+	Stats: {
+		Str: 0
+		Agi: 0
+		Vit: 0
+		Int: 0
+		Dex: 255
+		Luk: 13
+	}
+	ViewRange: 1
+	ChaseRange: 1
+	Size: 1
+	Race: 0
+	Element: (1, 1)
+	Mode: {
+		Aggressive: true
+		CanAttack: true
+		ChangeTargetMelee: true
+		ChangeTargetChase: true
+		SurviveWithoutMaster: true
+	}
+	AttackDelay: 500
+	AttackMotion: 672
+	DamageMotion: 480
+}
 )
