--- a/world/map/db/item_db.conf
+++ b/world/map/db/item_db.conf
@@ -5329,6 +5329,18 @@ item_db: (
 	}
 	//Disabled: true // @TMWA
 },
+{
+	Id: 5311
+	AegisName: "ShadowHerb"
+	Name: "ShadowHerb"
+	Type: "IT_ETC"
+	Buy: 2
+	Sell: 1
+	Weight: 1
+	Def: 0
+	Refine: false
+	ViewSprite: 5311
+},
 /* Chest Armor */
 {
 	Id: 523
@@ -15106,8 +15118,8 @@ item_db: (
 },
 {
 	Id: 1258
-	AegisName: "Honey"
-	Name: "Honey"
+	AegisName: "GlutenFreeHoney"
+	Name: "GlutenFreeHoney"
 	Type: "IT_USABLE"
 	Buy: 100
 	Sell: 50
@@ -15571,6 +15583,20 @@ item_db: (
 	ViewSprite: 5309
 	Script: <"
 		callfunc("SC_Bonus", 60, SC_PLUSMAGICPOWER, 100);
+	">
+},
+{
+	Id: 5312
+	AegisName: "Honey"
+	Name: "Honey"
+	Type: "IT_USABLE"
+	Buy: 150
+	Sell: 75
+	Weight: 4
+	Refine: false
+	ViewSprite: 5312
+	Script: <"
+		callfunc "itheal", 200, 50;
 	">
 },
 
