--- a/world/map/db/mob_db.conf
+++ b/world/map/db/mob_db.conf
@@ -225,7 +225,7 @@ mob_db: (
 	ViewRange: 2
 	ChaseRange: 10
 	Size: 1
-	Race: 3
+	Race: 4
 	Element: (2, 1)
 	Mode: {
 		CanMove: true
@@ -7724,6 +7724,12 @@ mob_db: (
 		RedApple: 100
 		InfantryHelmet: 20
 		CoinBag: 200
+		Diamond: 20
+		Ruby: 20
+		Emerald: 20
+		Sapphire: 20
+		Topaz: 20
+		Amethyst: 20
 	}
 },
 {
@@ -7971,7 +7977,7 @@ mob_db: (
 	ViewRange: 9
 	ChaseRange: 10
 	Size: 1
-	Race: 3
+	Race: 4
 	Element: (2, 1)
 	Mode: {
 		CanMove: true
@@ -8084,5 +8090,775 @@ mob_db: (
 	AttackDelay: 500
 	AttackMotion: 672
 	DamageMotion: 480
-}
+},
+{
+	Id: 1178
+	SpriteName: "SpiderQueen"
+	Name: "Spider Queen"
+	Lv: 145
+	Hp: 7000
+	Sp: 0
+	Exp: 1200
+	JExp: 400
+	AttackRange: 3
+	Attack: [250, 300]
+	Def: 120
+	Mdef: 80
+	Stats: {
+		Str: 40
+		Agi: 30
+		Vit: 50
+		Int: 15
+		Dex: 65
+		Luk: 40
+	}
+	ViewRange: 8
+	ChaseRange: 15
+	Size: 0
+	Race: 2
+	Element: (5, 1)
+	Mode: {
+		CanMove: true
+		CanAttack: true
+		CastSensorChase: true
+		ChangeChase: true
+		Boss: true
+		Angry: true
+		Aggressive: true
+	}
+	MoveSpeed: 210
+	AttackDelay: 1200
+	AttackMotion: 550
+	DamageMotion: 450
+	MutationCount: 3
+	MutationStrength: 30
+	Drops: {
+		BugLeg: 2500
+		MaggotSlime: 2000
+		IronOre: 600
+		Coal: 500
+		SilverOre: 100
+		TreasureKey: 800
+	}
+},
+{
+	Id: 1179
+	SpriteName: "CrystalSpiderQueen"
+	Name: "Crystal Spider Queen"
+	Lv: 150
+	Hp: 9000
+	Sp: 0
+	Exp: 1600
+	JExp: 450
+	AttackRange: 3
+	Attack: [250, 300]
+	Def: 150
+	Mdef: 100
+	Stats: {
+		Str: 45
+		Agi: 35
+		Vit: 60
+		Int: 30
+		Dex: 70
+		Luk: 50
+	}
+	ViewRange: 8
+	ChaseRange: 15
+	Size: 0
+	Race: 2
+	Element: (5, 1)
+	Mode: {
+		CanMove: true
+		Looter: true
+		Assist: true
+		CanAttack: true
+		ChangeTargetMelee: true
+		ChangeTargetChase: true
+		ChangeChase: true
+		Boss: true
+	}
+	MoveSpeed: 1000
+	AttackDelay: 1500
+	AttackMotion: 750
+	DamageMotion: 550
+	MutationCount: 4
+	MutationStrength: 30
+	Drops: {
+		TreasureKey: 800
+		RedApple: 200
+		InfantryHelmet: 35
+		CoinBag: 400
+		Diamond: 35
+		Ruby: 35
+		Emerald: 35
+		Sapphire: 35
+		Topaz: 35
+		Amethyst: 35
+	}
+},
+{
+	Id: 1048
+	SpriteName: "Duck"
+	Name: "Duck"
+	Lv: 14
+	Hp: 1282
+	Sp: 0
+	Exp: 16
+	JExp: 1
+	AttackRange: 1
+	Attack: [60, 63]
+	Def: 17
+	Mdef: 20
+	WalkMask: "WALK_WATER"
+	Stats: {
+		Str: 9
+		Agi: 18
+		Vit: 17
+		Int: 1
+		Dex: 16
+		Luk: 11
+	}
+	ViewRange: 6
+	ChaseRange: 12
+	Race: 2
+	Element: (1, 1)
+	Mode: {
+		CanMove: true
+		Looter: true
+		CanAttack: true
+		CastSensorChase: true
+		ChangeChase: true
+	}
+	MoveSpeed: 240
+	AttackDelay: 580
+	AttackMotion: 472
+	DamageMotion: 200
+	MutationCount: 2
+	MutationStrength: 30
+	Drops: {
+		CherryCake: 770
+		BugLeg: 350
+		ChickenLeg: 1000
+	}
+},
+{
+	Id: 1180
+	SpriteName: "MisterPrickel"
+	Name: "Mister Prickel"
+	Lv: 40
+	Hp: 4822
+	Sp: 0
+	Exp: 672
+	JExp: 111
+	AttackRange: 1
+	Attack: [250, 275]
+	Def: 23
+	Mdef: 33
+	Stats: {
+		Str: 20
+		Agi: 40
+		Vit: 55
+		Int: 1
+		Dex: 20
+		Luk: 30
+	}
+	ChaseRange: 12
+	Race: 3
+	Element: (0, 2)
+	Mode: {
+		CanMove: true
+		CanAttack: true
+		CastSensorChase: true
+		ChangeChase: true
+	}
+	MoveSpeed: 400
+	AttackDelay: 1000
+	AttackMotion: 452
+	DamaeMotion: 480
+	MutationCount: 2
+	MutationStrength: 40
+	Drops: {
+		CactusDrink: 300
+		CactusPotion: 200
+		HardSpike: 800
+		HardSpike: 400
+		RawLog: 700
+	}
+},
+{
+	Id: 1181
+	SpriteName: "SmallFrog"
+	Name: "Small Frog"
+	Lv: 9
+	Hp: 100
+	Sp: 0
+	Exp: 100
+	JExp: 10
+	AttackRange: 1
+	Attack: [10, 20]
+	Def: 19
+	Mdef: 3
+	Stats: {
+		Str: 10
+		Agi: 25
+		Vit: 25
+		Int: 1
+		Dex: 15
+		Luk: 20
+	}
+	ViewRange: 5
+	ChaseRange: 10
+	Size: 0
+	Race: 2
+	Element: (5, 1)
+	Mode: {
+		CanMove: true
+		CanAttack: true
+		CastSensorChase: true
+		ChangeChase: true
+	}
+	MoveSpeed: 600
+	AttackDelay: 1976
+	AttackMotion: 672
+	DamageMotion: 480
+	MutationCount: 2
+	MutationStrength: 30
+	Drops: {
+		MaggotSlime: 600
+		BugLeg: 200
+	}
+},
+{
+	Id: 1182
+	SpriteName: "BigFrog"
+	Name: "Big Frog"
+	Lv: 10
+	Hp: 200
+	Sp: 0
+	Exp: 150
+	JExp: 15
+	AttackRange: 1
+	Attack: [20, 30]
+	Def: 24
+	Mdef: 3
+	Stats: {
+		Str: 20
+		Agi: 15
+		Vit: 35
+		Int: 1
+		Dex: 15
+		Luk: 20
+	}
+	ViewRange: 5
+	ChaseRange: 10
+	Size: 0
+	Race: 2
+	Element: (5, 1)
+	Mode: {
+		CanMove: true
+		CanAttack: true
+		CastSensorChase: true
+		ChangeChase: true
+	}
+	MoveSpeed: 500
+	AttackDelay: 1976
+	AttackMotion: 672
+	DamageMotion: 480
+	MutationCount: 2
+	MutationStrength: 30
+	Drops: {
+		MaggotSlime: 700
+		BugLeg: 300
+	}
+},
+{
+	Id: 1183
+	SpriteName: "MobMoubootaur"
+	Name: "The Moubootaur"
+	Lv: 220
+	Hp: 99999
+	Sp: 9999
+	Exp: 999999
+	JExp: 99999
+	AttackRange: 1
+	Attack: [400, 500]
+	Def: 99
+	Mdef: 99
+	Stats: {
+		Str: 99
+		Agi: 60
+		Vit: 99
+		Int: 30
+		Dex: 255
+		Luk: 255
+	}
+	ViewRange: 18
+	ChaseRange: 18
+	Race: 6
+	Element: (7, 4)
+	Mode: {
+		CanMove: true
+		CanAttack: true
+		ChangeTargetMelee: true
+		ChangeChase: true
+		Aggressive: true
+		CastSensorChase: true
+		Boss: true
+	}
+	MoveSpeed: 240
+	AttackDelay: 872
+	AttackMotion: 272
+	DamageMotion: 100
+},
+{
+	Id: 1184
+	SpriteName: "BoneQuadceratops"
+	Name: "Bone Quadceratops"
+	Lv: 120
+	Hp: 22000
+	Sp: 0
+	Exp: 12120
+	JExp: 1888
+	AttackRange: 1
+	Attack: [100, 200]
+	Def: 66
+	Mdef: 44
+	CriticalDef: 0
+	Stats: {
+		Str: 60
+		Agi: 20
+		Vit: 60
+		Int: 1
+		Dex: 43
+		Luk: 70
+	}
+	ViewRange: 9
+	ChaseRange: 10
+	Size: 1
+	Race: 1
+	Element: (7, 1)
+	Mode: {
+		CanMove: true
+		Assist: true
+		CanAttack: true
+		ChangeTargetMelee: true
+		ChangeTargetChase: true
+		Boss: true
+	}
+	MoveSpeed: 750
+	AttackDelay: 800
+	AttackMotion: 692
+	DamageMotion: 720
+	MutationCount: 4
+	MutationStrength: 30
+	Drops: {
+		AnimalBones: 10000
+		AnimalBones: 5000
+		AnimalBones: 2500
+	}
+},
+{
+	Id: 1185
+	SpriteName: "EntAbomination"
+	Name: "Ent Abomination"
+	Lv: 130
+	Hp: 45000
+	Sp: 280
+	Exp: 48000
+	JExp: 1600
+	AttackRange: 2
+	Attack: [200, 250]
+	Def: 80
+	Mdef: 60
+	CriticalDef: 0
+	Stats: {
+		Str: 40
+		Agi: 12
+		Vit: 120
+		Int: 127
+		Dex: 60
+		Luk: 88
+	}
+	ViewRange: 31
+	ChaseRange: 30
+	Size: 1
+	Race: 3
+	Element: (2, 1)
+	Mode: {
+		CanMove: true
+		Assist: true
+		Boss: true
+		CanAttack: true
+		ChangeTargetMelee: true
+		ChangeTargetChase: true
+	}
+	MoveSpeed: 1500
+	AttackDelay: 900
+	AttackMotion: 772
+	DamageMotion: 740
+	MutationCount: 4
+	MutationStrength: 20
+	Drops: {
+		RawLog: 1000
+		RawLog: 2000
+	}
+},
+{
+	Id: 1186
+	SpriteName: "MananaTree"
+	Name: "Manana Tree"
+	Lv: 5
+	Hp: 2500
+	Sp: 0
+	Exp: 2
+	AttackRange: 1
+	Attack: [10, 10]
+	Def: 25
+	Mdef: 1
+	Stats: {
+		Str: 1
+		Agi: 1
+		Vit: 10
+		Int: 1
+		Dex: 1
+		Luk: 1
+	}
+	ChaseRange: 12
+	Race: 3
+	Element: (2, 1)
+	MoveSpeed: 1000
+	AttackDelay: 800
+	AttackMotion: 672
+	DamageMotion: 480
+	MutationCount: 1
+	MutationStrength: 80
+	Drops: {
+		RawLog: 1000
+		RawLog: 2000
+	}
+},
+{
+	Id: 1187
+	SpriteName: "EliteDuck"
+	Name: "Elite Duck"
+	Lv: 75
+	Hp: 14000
+	Sp: 0
+	Exp: 8800
+	JExp: 860
+	AttackRange: 2
+	Attack: [170, 195]
+	Def: 50
+	Mdef: 180
+	WalkMask: "WALK_WATER"
+	Stats: {
+		Str: 70
+		Agi: 120
+		Vit: 10
+		Int: 42
+		Dex: 48
+		Luk: 95
+	}
+	ViewRange: 5
+	ChaseRange: 12
+	Race: 2
+	Element: (3, 1)
+	Mode: {
+		CanMove: true
+		Looter: true
+		Aggressive: true
+		CanAttack: true
+		CastSensorChase: true
+		ChangeChase: true
+		Boss: true
+	}
+	MoveSpeed: 225
+	AttackDelay: 500
+	AttackMotion: 472
+	DamageMotion: 200
+	MutationCount: 2
+	MutationStrength: 40
+	Drops: {
+		CherryCake: 1005
+		BugLeg: 400
+		ChickenLeg: 2000
+	}
+},
+{
+	Id: 1188
+	SpriteName: "Junglefowl"
+	Name: "Junglefowl"
+	Lv: 125
+	Hp: 25500
+	Exp: 15000
+	JExp: 2125
+	AttackRange: 1
+	Attack: [175, 250]
+	Def: 45
+	Mdef: 47
+	Race: 2
+	Element: (4, 1)
+	Stats: {
+		Str: 70
+		Agi: 99
+		Vit: 80
+		Int: 22
+		Dex: 99
+		Luk: 70
+	}
+	Mode: {
+		CanMove: true
+		Assist: true
+		ChangeChase: true
+		ChangeTargetChase: true
+		ChangeTargetMelee: true
+		CanAttack: true
+		CastSensorChase: true
+		Boss: true
+	}
+	MoveSpeed: 400
+	AttackDelay: 1000
+	AttackMotion: 672
+	DamageMotion: 200
+	ViewRange: 7
+	ChaseRange: 11
+	Drops: {
+		ChickenLeg: 2520
+		ChickenLeg: 1520
+		AnimalBones: 500
+	}
+},
+{
+	Id: 1189
+	SpriteName: "ShadowPlant"
+	Name: "Shadow Plant"
+	Lv: 1
+	Hp: 1
+	Sp: 0
+	Exp: 1
+	JExp: 1
+	AttackRange: 1
+	Attack: [0, 0]
+	Def: 1
+	Mdef: 0
+	CriticalDef: 0
+	Stats: {
+		Str: 0
+		Agi: 0
+		Vit: 0
+		Int: 0
+		Dex: 0
+		Luk: 0
+	}
+	ViewRange: 9
+	ChaseRange: 10
+	Size: 1
+	Race: 3
+	Element: (2, 1)
+	MoveSpeed: 800
+	AttackDelay: 800
+	AttackMotion: 672
+	DamageMotion: 480
+	Drops: {
+		ShadowHerb: 3000
+		ShadowHerb: 3000
+		ShadowHerb: 3000
+	}
+},
+{
+	Id: 1190
+	SpriteName: "BeeHive"
+	Name: "Bee Hive"
+	Lv: 39
+	Hp: 3333
+	Sp: 1
+	Exp: 1000
+	JExp: 200
+	AttackRange: 14
+	Attack: [5, 90]
+	Def: 12
+	Mdef: 4
+	CriticalDef: 0
+	Stats: {
+		Str: 15
+		Agi: 25
+		Vit: 20
+		Int: 3
+		Dex: 40
+		Luk: 30
+	}
+	ViewRange: 9
+	ChaseRange: 10
+	Size: 1
+	Race: 4
+	Element: (2, 1)
+	Mode: {
+		CanMove: false
+		CanAttack: true
+		ChangeTargetMelee: true
+		ChangeTargetChase: true
+	}
+	MoveSpeed: 380
+	AttackDelay: 1500
+	AttackMotion: 300
+	DamageMotion: 350
+	MutationCount: 2
+	MutationStrength: 100
+	Drops: {
+		Honey: 1000
+		Honey: 750
+		Honey: 500
+	}
+},
+{
+	Id: 1191
+	SpriteName: "Tortuga"
+	Name: "Tortuga"
+	Lv: 19
+	Hp: 535
+	Sp: 0
+	Exp: 350
+	JExp: 38
+	AttackRange: 1
+	Attack: [33, 44]
+	Def: 30
+	Mdef: 50
+	WalkMask: "WALK_WATER"
+	Stats: {
+		Str: 18
+		Agi: 12
+		Vit: 1
+		Int: 8
+		Dex: 80
+		Luk: 25
+	}
+	ChaseRange: 12
+	Race: 2
+	Element: (1, 1)
+	Mode: {
+		CanMove: true
+		CanAttack: true
+		CastSensorChase: true
+		ChangeChase: true
+	}
+	MoveSpeed: 700
+	AttackDelay: 1872
+	AttackMotion: 672
+	DamageMotion: 480
+	WeaponAttacks: {
+		Bows: 5000
+	}
+},
+{
+	Id: 1192
+	SpriteName: "Ratto"
+	Name: "Ratto"
+	Lv: 15
+	Hp: 250
+	Sp: 0
+	Exp: 200
+	JExp: 30
+	AttackRange: 1
+	Attack: [25, 35]
+	Def: 13
+	Mdef: 6
+	Stats: {
+		Str: 5
+		Agi: 10
+		Vit: 13
+		Int: 1
+		Dex: 11
+		Luk: 6
+	}
+	ViewRange: 3
+	ChaseRange: 12
+	Race: 2
+	Element: (0, 1)
+	Mode: {
+		CanMove: true
+		Looter: true
+		CanAttack: true
+		CastSensorChase: true
+		ChangeChase: true
+	}
+	MoveSpeed: 120
+	AttackDelay: 1572
+	AttackMotion: 672
+	DamageMotion: 480
+},
+{
+	Id: 1193
+	SpriteName: "Croc"
+	Name: "Croc"
+	Lv: 17
+	Hp: 350
+	Sp: 0
+	Exp: 300
+	JExp: 35
+	AttackRange: 1
+	Attack: [124, 129]
+	Def: 54
+	Mdef: 6
+	Stats: {
+		Str: 6
+		Agi: 10
+		Vit: 13
+		Int: 1
+		Dex: 11
+		Luk: 6
+	}
+	ChaseRange: 12
+	Race: 2
+	Element: (1, 1)
+	Mode: {
+		CanMove: true
+		CanAttack: true
+		CastSensorChase: true
+		ChangeChase: true
+	}
+	MoveSpeed: 600
+	AttackDelay: 1872
+	AttackMotion: 672
+	DamageMotion: 200
+},
+{
+	Id: 1194
+	SpriteName: "Birb"
+	Name: "King Chonky Birb"
+	Lv: 101
+	Hp: 57000
+	Sp: 0
+	Exp: 44000
+	JExp: 2000
+	AttackRange: 1
+	Attack: [320, 370]
+	Def: 45
+	Mdef: 127
+	Stats: {
+		Str: 12
+		Agi: 63
+		Vit: 88
+		Int: 110
+		Dex: 141
+		Luk: 77
+	}
+	ViewRange: 9
+	ChaseRange: 12
+	Race: 2
+	Element: (7, 1)
+	Mode: {
+		CanMove: true
+		CanAttack: true
+		Aggressive: false
+		Angry: false
+		ChangeTargetMelee: true
+		ChangeChase: true
+		CastSensorChase: true
+		Boss: true
+	}
+	MoveSpeed: 320
+	AttackDelay: 2100
+	AttackMotion: 672
+	DamageMotion: 200
+},
 )
