Cerrected range issue

--- a/world/map/db/mob_db.conf
+++ b/world/map/db/mob_db.conf
@@ -8011,7 +8011,7 @@ mob_db: (
 	Sp: 0
 	Exp: 5533
 	JExp: 733
-	AttackRange: 7
+	AttackRange: 4
 	Attack: [213, 333]
 	Def: 20
 	Mdef: 25
@@ -8020,12 +8020,12 @@ mob_db: (
 		Str: 30
 		Agi: 15
 		Vit: 30
-		Int: 11
+		Int: 1
 		Dex: 100
 		Luk: 113
 	}
-	ViewRange: 3
-	ChaseRange: 12
+	ViewRange: 7
+	ChaseRange: 11
 	Size: 1
 	Race: 1
 	Element: (7, 1)
@@ -8034,6 +8034,7 @@ mob_db: (
 		Aggressive: true
 		Assist: true
 		CanAttack: true
+		ChangeChase: true
 		ChangeTargetMelee: true
 		ChangeTargetChase: true
 		Detector: true
