Added rare drops to corresponding mobs

--- a/world/map/db/mob_db.conf
+++ b/world/map/db/mob_db.conf
@@ -334,6 +334,7 @@ mob_db: (
 		CactusDrink: 150
 		BugLeg: 50
 		HardSpike: 400
+		ShroomHat: (1, "ODG_BASICSTAT")
 	}
 },
 {
@@ -1600,6 +1601,7 @@ mob_db: (
 		CoinBag: 400
 		SmallMushroom: 1000
 		SmallMushroom: 1000
+		MushHat: (1, "ODG_BASICSTAT")
 	}
 },
 {
@@ -1795,6 +1797,7 @@ mob_db: (
 		PileOfAsh: 5000
 		DarkCrystal: 1000
 		Skull: 500
+		SkullMask: (1, "ODG_BASICSTAT")
 	}
 },
 {
@@ -1842,6 +1845,7 @@ mob_db: (
 	Drops: {
 		DarkCrystal: 1000
 		Skull: 500
+		SkullMask: (1, "ODG_BASICSTAT")
 	}
 },
 {
@@ -1989,6 +1993,7 @@ mob_db: (
 		UndeadEye: 150
 		Soul: 500
 		GoldenTooth: 10
+		Tongue: 3
 	}
 },
 {
@@ -2182,7 +2187,7 @@ mob_db: (
 		RottenRags: 1000
 		Bone: 500
 		Skull: 100
-		SkullMask: 10
+		SkullMask: (10, "ODG_BASICSTAT")
 	}
 },
 {
@@ -2228,7 +2233,7 @@ mob_db: (
 		RottenRags: 1000
 		Bone: 500
 		Skull: 100
-		SkullMask: 10
+		SkullMask: (10, "ODG_BASICSTAT")
 	}
 },
 {
@@ -2613,6 +2618,7 @@ mob_db: (
 		IronOre: 200
 		Emerald: 200
 		Coal: 600
+		NutcrackerHat: (1, "ODG_BASICSTAT")
 	}
 },
 {
@@ -3123,6 +3129,7 @@ mob_db: (
 		Lifestone: 300
 		EmptyBottle: 100
 		JoyplimScroll: 50
+		MoonshroomHat: (1, "ODG_BASICSTAT")
 	}
 },
 {
@@ -3540,6 +3547,9 @@ mob_db: (
 	AttackDelay: 1200
 	AttackMotion: 672
 	DamageMotion: 50
+	Drops: {
+		TinyManaElixir: 500
+	}
 },
 {
 	Id: 1141
@@ -3581,6 +3591,9 @@ mob_db: (
 	AttackDelay: 1200
 	AttackMotion: 672
 	DamageMotion: 50
+	Drops: {
+		TinyManaElixir: 500
+	}
 },
 {
 	Id: 1142
@@ -3663,6 +3676,9 @@ mob_db: (
 	AttackDelay: 1200
 	AttackMotion: 672
 	DamageMotion: 50
+	Drops: {
+		TinyManaElixir: 500
+	}
 },
 {
 	Id: 1144
@@ -3792,6 +3808,9 @@ mob_db: (
 	AttackDelay: 600
 	AttackMotion: 672
 	DamageMotion: 50
+	Drops: {
+		TinyManaElixir: 500
+	}
 },
 {
 	Id: 1147
@@ -3833,6 +3852,9 @@ mob_db: (
 	AttackDelay: 1400
 	AttackMotion: 672
 	DamageMotion: 50
+	Drops: {
+		TinyManaElixir: 500
+	}
 },
 {
 	Id: 1148
@@ -4649,6 +4671,7 @@ mob_db: (
 		BottleOfWater: 750
 		CottonCloth: 50
 		ReedBundle: 500
+		MoubooHead: (1, "ODG_BASICSTAT")
 	}
 },
 {
@@ -5119,6 +5142,7 @@ mob_db: (
 		TonoriDelight: 400
 		DiseasedHeart: 250
 		GoldenTooth: 40
+		TopHat: (1, "ODG_BASICSTAT")
 	}
 },
 {
@@ -5170,6 +5194,7 @@ mob_db: (
 		CandyPumpkin: 250
 		DiseasedHeart: 250
 		GoldenTooth: 40
+		BowlerHat: (1, "ODG_BASICSTAT")
 	}
 },
 {
@@ -5221,6 +5246,7 @@ mob_db: (
 		JellySkull: 250
 		DiseasedHeart: 250
 		GoldenTooth: 40
+		HeartGlasses: (1, "ODG_BASICSTAT")
 	}
 },
 {
@@ -5520,6 +5546,7 @@ mob_db: (
 		IronPowder: 100
 		EnlighteningElixir: 1200
 		GoldenTooth: 20
+		WitchHat: (1, "ODG_BASICSTAT")
 	}
 },
 {
@@ -7676,6 +7703,7 @@ mob_db: (
 		RoastedMaggot: 150
 		Dagger: 70
 		SharpKnife: 1
+		IronIngot: 5
 	}
 },
 {
@@ -7950,6 +7978,7 @@ mob_db: (
 	Drops: {
 		Boots: 5000
 		LeatherGloves: 200
+		CrazyRum: 500
 	}
 },
 {
@@ -8052,6 +8081,7 @@ mob_db: (
 		UndeadEar: 500
 		Soul: 500
 		GoldenTooth: 10
+		Tongue: 1
 	}
 },
 {
