remove Wlv from armors

--- a/world/map/db/item_db.conf
+++ b/world/map/db/item_db.conf
@@ -1118,7 +1118,7 @@ item_db: (
 	WeaponLv: 1
 	EquipLv: 1
 	Refine: false
-	Subtype: "W_HUUMA"
+	Subtype: "W_BOOK"
 },
 {
 	Id: 907
@@ -1142,7 +1142,7 @@ item_db: (
 		nomail: true
 		noauction: true
 	}
-	Subtype: "W_HUUMA"
+	Subtype: "W_BOOK"
 },
 {
 	Id: 1199
@@ -1542,7 +1542,6 @@ item_db: (
 	Def: 0
 	Slots: 0
 	Loc: "EQP_ACC_L"
-	WeaponLv: 0
 	EquipLv: 85
 	Refine: false
 	ViewSprite: 879
@@ -5679,7 +5678,6 @@ item_db: (
 	Def: 15
 	Slots: 0
 	Loc: "EQP_HEAD_MID"
-	WeaponLv: 0
 	EquipLv: 90
 	Refine: false
 	ViewSprite: 755
@@ -5836,7 +5834,6 @@ item_db: (
 	Def: 7
 	Slots: 0
 	Loc: "EQP_HEAD_MID"
-	WeaponLv: 0
 	EquipLv: 90
 	Refine: false
 	ViewSprite: 880
@@ -10841,7 +10838,6 @@ item_db: (
 	Def: 19
 	Slots: 0
 	Loc: "EQP_HEAD_TOP"
-	WeaponLv: 0
 	EquipLv: 90
 	Refine: false
 	ViewSprite: 877
@@ -10871,7 +10867,6 @@ item_db: (
 	Def: 9
 	Slots: 0
 	Loc: "EQP_HEAD_TOP"
-	WeaponLv: 0
 	EquipLv: 1
 	Refine: false
 	ViewSprite: 882
@@ -10890,7 +10885,6 @@ item_db: (
 	Def: 9
 	Slots: 0
 	Loc: "EQP_HEAD_TOP"
-	WeaponLv: 0
 	EquipLv: 1
 	Refine: false
 	ViewSprite: 883
@@ -10909,7 +10903,6 @@ item_db: (
 	Def: 9
 	Slots: 0
 	Loc: "EQP_HEAD_TOP"
-	WeaponLv: 0
 	EquipLv: 1
 	Refine: false
 	ViewSprite: 884
@@ -10928,7 +10921,6 @@ item_db: (
 	Def: 9
 	Slots: 0
 	Loc: "EQP_HEAD_TOP"
-	WeaponLv: 0
 	EquipLv: 1
 	Refine: false
 	ViewSprite: 885
@@ -10947,7 +10939,6 @@ item_db: (
 	Def: 9
 	Slots: 0
 	Loc: "EQP_HEAD_TOP"
-	WeaponLv: 0
 	EquipLv: 1
 	Refine: false
 	ViewSprite: 886
@@ -10966,7 +10957,6 @@ item_db: (
 	Def: 9
 	Slots: 0
 	Loc: "EQP_HEAD_TOP"
-	WeaponLv: 0
 	EquipLv: 1
 	Refine: false
 	ViewSprite: 887
@@ -11481,7 +11471,6 @@ item_db: (
 	Def: 5
 	Slots: 0
 	Loc: "EQP_HEAD_TOP"
-	WeaponLv: 0
 	EquipLv: 1
 	Refine: false
 	ViewSprite: 1255
@@ -11500,7 +11489,6 @@ item_db: (
 	Def: 12
 	Slots: 0
 	Loc: "EQP_HEAD_TOP"
-	WeaponLv: 0
 	EquipLv: 1
 	Refine: false
 	ViewSprite: 1256
@@ -11918,7 +11906,6 @@ item_db: (
 	Def: 5
 	Slots: 0
 	Loc: "EQP_HEAD_TOP"
-	WeaponLv: 0
 	EquipLv: 1
 	Refine: false
 	ViewSprite: 2190
@@ -11938,7 +11925,6 @@ item_db: (
 	Def: 5
 	Slots: 0
 	Loc: "EQP_HEAD_TOP"
-	WeaponLv: 0
 	EquipLv: 1
 	Refine: false
 	ViewSprite: 2191
@@ -11958,7 +11944,6 @@ item_db: (
 	Def: 5
 	Slots: 0
 	Loc: "EQP_HEAD_TOP"
-	WeaponLv: 0
 	EquipLv: 1
 	Refine: false
 	ViewSprite: 2192
@@ -11978,7 +11963,6 @@ item_db: (
 	Def: 5
 	Slots: 0
 	Loc: "EQP_HEAD_TOP"
-	WeaponLv: 0
 	EquipLv: 1
 	Refine: false
 	ViewSprite: 2193
@@ -11998,7 +11982,6 @@ item_db: (
 	Def: 5
 	Slots: 0
 	Loc: "EQP_HEAD_TOP"
-	WeaponLv: 0
 	EquipLv: 1
 	Refine: false
 	ViewSprite: 2194
@@ -12018,7 +12001,6 @@ item_db: (
 	Def: 5
 	Slots: 0
 	Loc: "EQP_HEAD_TOP"
-	WeaponLv: 0
 	EquipLv: 1
 	Refine: false
 	ViewSprite: 2195
@@ -12038,7 +12020,6 @@ item_db: (
 	Def: 5
 	Slots: 0
 	Loc: "EQP_HEAD_TOP"
-	WeaponLv: 0
 	EquipLv: 1
 	Refine: false
 	ViewSprite: 2196
@@ -12058,7 +12039,6 @@ item_db: (
 	Def: 5
 	Slots: 0
 	Loc: "EQP_HEAD_TOP"
-	WeaponLv: 0
 	EquipLv: 1
 	Refine: false
 	ViewSprite: 2197
@@ -12078,7 +12058,6 @@ item_db: (
 	Def: 5
 	Slots: 0
 	Loc: "EQP_HEAD_TOP"
-	WeaponLv: 0
 	EquipLv: 1
 	Refine: false
 	ViewSprite: 2198
@@ -12098,7 +12077,6 @@ item_db: (
 	Def: 5
 	Slots: 0
 	Loc: "EQP_HEAD_TOP"
-	WeaponLv: 0
 	EquipLv: 1
 	Refine: false
 	ViewSprite: 2199
@@ -12118,7 +12096,6 @@ item_db: (
 	Def: 5
 	Slots: 0
 	Loc: "EQP_HEAD_TOP"
-	WeaponLv: 0
 	EquipLv: 1
 	Refine: false
 	ViewSprite: 2200
@@ -12139,7 +12116,6 @@ item_db: (
 	Def: 5
 	Slots: 0
 	Loc: "EQP_HEAD_TOP"
-	WeaponLv: 0
 	EquipLv: 1
 	Refine: false
 	ViewSprite: 2201
@@ -12160,7 +12136,6 @@ item_db: (
 	Def: 5
 	Slots: 0
 	Loc: "EQP_HEAD_TOP"
-	WeaponLv: 0
 	EquipLv: 1
 	Refine: false
 	ViewSprite: 2202
@@ -12181,7 +12156,6 @@ item_db: (
 	Def: 5
 	Slots: 0
 	Loc: "EQP_HEAD_TOP"
-	WeaponLv: 0
 	EquipLv: 1
 	Refine: false
 	ViewSprite: 2203
@@ -12202,7 +12176,6 @@ item_db: (
 	Def: 5
 	Slots: 0
 	Loc: "EQP_HEAD_TOP"
-	WeaponLv: 0
 	EquipLv: 1
 	Refine: false
 	ViewSprite: 2204
@@ -12223,7 +12196,6 @@ item_db: (
 	Def: 5
 	Slots: 0
 	Loc: "EQP_HEAD_TOP"
-	WeaponLv: 0
 	EquipLv: 1
 	Refine: false
 	ViewSprite: 2205
@@ -12244,7 +12216,6 @@ item_db: (
 	Def: 5
 	Slots: 0
 	Loc: "EQP_HEAD_TOP"
-	WeaponLv: 0
 	EquipLv: 1
 	Refine: false
 	ViewSprite: 2206
@@ -12265,7 +12236,6 @@ item_db: (
 	Def: 5
 	Slots: 0
 	Loc: "EQP_HEAD_TOP"
-	WeaponLv: 0
 	EquipLv: 1
 	Refine: false
 	ViewSprite: 2207
@@ -12286,7 +12256,6 @@ item_db: (
 	Def: 5
 	Slots: 0
 	Loc: "EQP_HEAD_TOP"
-	WeaponLv: 0
 	EquipLv: 1
 	Refine: false
 	ViewSprite: 2208
@@ -12307,7 +12276,6 @@ item_db: (
 	Def: 5
 	Slots: 0
 	Loc: "EQP_HEAD_TOP"
-	WeaponLv: 0
 	EquipLv: 1
 	Refine: false
 	ViewSprite: 2209
@@ -12991,7 +12959,6 @@ item_db: (
 	Def: 5
 	Slots: 0
 	Loc: "EQP_HEAD_TOP"
-	WeaponLv: 0
 	EquipLv: 1
 	Refine: false
 	ViewSprite: 4028
@@ -13181,7 +13148,6 @@ item_db: (
 	Def: 2
 	Slots: 0
 	Loc: "EQP_HEAD_TOP"
-	WeaponLv: 0
 	EquipLv: 18
 	Refine: false
 	ViewSprite: 5201
@@ -15612,7 +15578,6 @@ item_db: (
 	Def: 2
 	Slots: 0
 	Loc: "EQP_HEAD_LOW"
-	WeaponLv: 0
 	EquipLv: 1
 	Refine: false
 	ViewSprite: 586
@@ -15650,7 +15615,6 @@ item_db: (
 	Def: 4
 	Slots: 0
 	Loc: "EQP_HEAD_LOW"
-	WeaponLv: 0
 	EquipLv: 1
 	Refine: false
 	ViewSprite: 632
@@ -15688,7 +15652,6 @@ item_db: (
 	Def: 4
 	Slots: 0
 	Loc: "EQP_HEAD_LOW"
-	WeaponLv: 0
 	EquipLv: 1
 	Refine: false
 	ViewSprite: 648
@@ -15748,7 +15711,6 @@ item_db: (
 	Def: 4
 	Slots: 0
 	Loc: "EQP_HEAD_LOW"
-	WeaponLv: 0
 	EquipLv: 1
 	Refine: false
 	ViewSprite: 771
@@ -15805,7 +15767,6 @@ item_db: (
 	Def: 1
 	Slots: 0
 	Loc: "EQP_HEAD_LOW"
-	WeaponLv: 0
 	EquipLv: 1
 	Refine: false
 	ViewSprite: 881
@@ -15824,7 +15785,6 @@ item_db: (
 	Def: 2
 	Slots: 0
 	Loc: "EQP_HEAD_LOW"
-	WeaponLv: 0
 	EquipLv: 1
 	Refine: false
 	ViewSprite: 1172
@@ -15841,7 +15801,6 @@ item_db: (
 	Def: 4
 	Slots: 0
 	Loc: "EQP_HEAD_LOW"
-	WeaponLv: 0
 	EquipLv: 1
 	Refine: false
 	ViewSprite: 2100
@@ -15861,7 +15820,6 @@ item_db: (
 	Def: 4
 	Slots: 0
 	Loc: "EQP_HEAD_LOW"
-	WeaponLv: 0
 	EquipLv: 1
 	Refine: false
 	ViewSprite: 2101
@@ -15881,7 +15839,6 @@ item_db: (
 	Def: 4
 	Slots: 0
 	Loc: "EQP_HEAD_LOW"
-	WeaponLv: 0
 	EquipLv: 1
 	Refine: false
 	ViewSprite: 2102
@@ -15901,7 +15858,6 @@ item_db: (
 	Def: 4
 	Slots: 0
 	Loc: "EQP_HEAD_LOW"
-	WeaponLv: 0
 	EquipLv: 1
 	Refine: false
 	ViewSprite: 2103
@@ -15921,7 +15877,6 @@ item_db: (
 	Def: 4
 	Slots: 0
 	Loc: "EQP_HEAD_LOW"
-	WeaponLv: 0
 	EquipLv: 1
 	Refine: false
 	ViewSprite: 2104
@@ -15941,7 +15896,6 @@ item_db: (
 	Def: 4
 	Slots: 0
 	Loc: "EQP_HEAD_LOW"
-	WeaponLv: 0
 	EquipLv: 1
 	Refine: false
 	ViewSprite: 2105
@@ -15961,7 +15915,6 @@ item_db: (
 	Def: 4
 	Slots: 0
 	Loc: "EQP_HEAD_LOW"
-	WeaponLv: 0
 	EquipLv: 1
 	Refine: false
 	ViewSprite: 2106
@@ -15981,7 +15934,6 @@ item_db: (
 	Def: 4
 	Slots: 0
 	Loc: "EQP_HEAD_LOW"
-	WeaponLv: 0
 	EquipLv: 1
 	Refine: false
 	ViewSprite: 2107
@@ -16001,7 +15953,6 @@ item_db: (
 	Def: 4
 	Slots: 0
 	Loc: "EQP_HEAD_LOW"
-	WeaponLv: 0
 	EquipLv: 1
 	Refine: false
 	ViewSprite: 2108
@@ -16021,7 +15972,6 @@ item_db: (
 	Def: 4
 	Slots: 0
 	Loc: "EQP_HEAD_LOW"
-	WeaponLv: 0
 	EquipLv: 1
 	Refine: false
 	ViewSprite: 2109
@@ -16041,7 +15991,6 @@ item_db: (
 	Def: 2
 	Slots: 0
 	Loc: "EQP_HEAD_LOW"
-	WeaponLv: 0
 	EquipLv: 1
 	Refine: false
 	ViewSprite: 2110
@@ -16061,7 +16010,6 @@ item_db: (
 	Def: 2
 	Slots: 0
 	Loc: "EQP_HEAD_LOW"
-	WeaponLv: 0
 	EquipLv: 1
 	Refine: false
 	ViewSprite: 2111
@@ -16081,7 +16029,6 @@ item_db: (
 	Def: 2
 	Slots: 0
 	Loc: "EQP_HEAD_LOW"
-	WeaponLv: 0
 	EquipLv: 1
 	Refine: false
 	ViewSprite: 2112
@@ -16101,7 +16048,6 @@ item_db: (
 	Def: 2
 	Slots: 0
 	Loc: "EQP_HEAD_LOW"
-	WeaponLv: 0
 	EquipLv: 1
 	Refine: false
 	ViewSprite: 2113
@@ -16121,7 +16067,6 @@ item_db: (
 	Def: 2
 	Slots: 0
 	Loc: "EQP_HEAD_LOW"
-	WeaponLv: 0
 	EquipLv: 1
 	Refine: false
 	ViewSprite: 2114
@@ -16141,7 +16086,6 @@ item_db: (
 	Def: 2
 	Slots: 0
 	Loc: "EQP_HEAD_LOW"
-	WeaponLv: 0
 	EquipLv: 1
 	Refine: false
 	ViewSprite: 2115
@@ -16161,7 +16105,6 @@ item_db: (
 	Def: 2
 	Slots: 0
 	Loc: "EQP_HEAD_LOW"
-	WeaponLv: 0
 	EquipLv: 1
 	Refine: false
 	ViewSprite: 2116
@@ -16181,7 +16124,6 @@ item_db: (
 	Def: 2
 	Slots: 0
 	Loc: "EQP_HEAD_LOW"
-	WeaponLv: 0
 	EquipLv: 1
 	Refine: false
 	ViewSprite: 2117
@@ -16201,7 +16143,6 @@ item_db: (
 	Def: 2
 	Slots: 0
 	Loc: "EQP_HEAD_LOW"
-	WeaponLv: 0
 	EquipLv: 1
 	Refine: false
 	ViewSprite: 2118
@@ -16221,7 +16162,6 @@ item_db: (
 	Def: 2
 	Slots: 0
 	Loc: "EQP_HEAD_LOW"
-	WeaponLv: 0
 	EquipLv: 1
 	Refine: false
 	ViewSprite: 2119
@@ -16241,7 +16181,6 @@ item_db: (
 	Def: 4
 	Slots: 0
 	Loc: "EQP_HEAD_LOW"
-	WeaponLv: 0
 	EquipLv: 1
 	Refine: false
 	ViewSprite: 2170
@@ -16261,7 +16200,6 @@ item_db: (
 	Def: 4
 	Slots: 0
 	Loc: "EQP_HEAD_LOW"
-	WeaponLv: 0
 	EquipLv: 1
 	Refine: false
 	ViewSprite: 2171
@@ -16281,7 +16219,6 @@ item_db: (
 	Def: 4
 	Slots: 0
 	Loc: "EQP_HEAD_LOW"
-	WeaponLv: 0
 	EquipLv: 1
 	Refine: false
 	ViewSprite: 2172
@@ -16301,7 +16238,6 @@ item_db: (
 	Def: 4
 	Slots: 0
 	Loc: "EQP_HEAD_LOW"
-	WeaponLv: 0
 	EquipLv: 1
 	Refine: false
 	ViewSprite: 2173
@@ -16321,7 +16257,6 @@ item_db: (
 	Def: 4
 	Slots: 0
 	Loc: "EQP_HEAD_LOW"
-	WeaponLv: 0
 	EquipLv: 1
 	Refine: false
 	ViewSprite: 2174
@@ -16341,7 +16276,6 @@ item_db: (
 	Def: 4
 	Slots: 0
 	Loc: "EQP_HEAD_LOW"
-	WeaponLv: 0
 	EquipLv: 1
 	Refine: false
 	ViewSprite: 2175
@@ -16361,7 +16295,6 @@ item_db: (
 	Def: 4
 	Slots: 0
 	Loc: "EQP_HEAD_LOW"
-	WeaponLv: 0
 	EquipLv: 1
 	Refine: false
 	ViewSprite: 2176
@@ -16381,7 +16314,6 @@ item_db: (
 	Def: 4
 	Slots: 0
 	Loc: "EQP_HEAD_LOW"
-	WeaponLv: 0
 	EquipLv: 1
 	Refine: false
 	ViewSprite: 2177
@@ -16401,7 +16333,6 @@ item_db: (
 	Def: 4
 	Slots: 0
 	Loc: "EQP_HEAD_LOW"
-	WeaponLv: 0
 	EquipLv: 1
 	Refine: false
 	ViewSprite: 2178
@@ -16421,7 +16352,6 @@ item_db: (
 	Def: 4
 	Slots: 0
 	Loc: "EQP_HEAD_LOW"
-	WeaponLv: 0
 	EquipLv: 1
 	Refine: false
 	ViewSprite: 2179
@@ -16441,7 +16371,6 @@ item_db: (
 	Def: 4
 	Slots: 0
 	Loc: "EQP_HEAD_LOW"
-	WeaponLv: 0
 	EquipLv: 1
 	Refine: false
 	ViewSprite: 2180
@@ -16461,7 +16390,6 @@ item_db: (
 	Def: 4
 	Slots: 0
 	Loc: "EQP_HEAD_LOW"
-	WeaponLv: 0
 	EquipLv: 1
 	Refine: false
 	ViewSprite: 2181
@@ -16481,7 +16409,6 @@ item_db: (
 	Def: 4
 	Slots: 0
 	Loc: "EQP_HEAD_LOW"
-	WeaponLv: 0
 	EquipLv: 1
 	Refine: false
 	ViewSprite: 2182
@@ -16501,7 +16428,6 @@ item_db: (
 	Def: 4
 	Slots: 0
 	Loc: "EQP_HEAD_LOW"
-	WeaponLv: 0
 	EquipLv: 1
 	Refine: false
 	ViewSprite: 2183
@@ -16521,7 +16447,6 @@ item_db: (
 	Def: 4
 	Slots: 0
 	Loc: "EQP_HEAD_LOW"
-	WeaponLv: 0
 	EquipLv: 1
 	Refine: false
 	ViewSprite: 2184
@@ -16541,7 +16466,6 @@ item_db: (
 	Def: 4
 	Slots: 0
 	Loc: "EQP_HEAD_LOW"
-	WeaponLv: 0
 	EquipLv: 1
 	Refine: false
 	ViewSprite: 2185
@@ -16561,7 +16485,6 @@ item_db: (
 	Def: 4
 	Slots: 0
 	Loc: "EQP_HEAD_LOW"
-	WeaponLv: 0
 	EquipLv: 1
 	Refine: false
 	ViewSprite: 2186
@@ -16581,7 +16504,6 @@ item_db: (
 	Def: 4
 	Slots: 0
 	Loc: "EQP_HEAD_LOW"
-	WeaponLv: 0
 	EquipLv: 1
 	Refine: false
 	ViewSprite: 2187
@@ -16601,7 +16523,6 @@ item_db: (
 	Def: 4
 	Slots: 0
 	Loc: "EQP_HEAD_LOW"
-	WeaponLv: 0
 	EquipLv: 1
 	Refine: false
 	ViewSprite: 2188
@@ -16621,7 +16542,6 @@ item_db: (
 	Def: 4
 	Slots: 0
 	Loc: "EQP_HEAD_LOW"
-	WeaponLv: 0
 	EquipLv: 1
 	Refine: false
 	ViewSprite: 2189
@@ -16947,7 +16867,6 @@ item_db: (
 	Def: 0
 	Slots: 0
 	Loc: "EQP_HAND_L"
-	WeaponLv: 0
 	EquipLv: 1
 	Refine: false
 	ViewSprite: 585
