--- a/world/map/db/item_db.conf
+++ b/world/map/db/item_db.conf
@@ -5301,7 +5301,7 @@ item_db: (
 	Type: "IT_ETC"
 	Buy: 20000
 	Sell: 2000
-	Weight: 40
+	Weight: 20
 	Def: 0
 	Refine: false
 	ViewSprite: 5297
@@ -5339,6 +5339,120 @@ item_db: (
 	Def: 0
 	Refine: false
 	ViewSprite: 5311
+},
+{
+	Id: 5313
+	AegisName: "CrozeniteCrystal"
+	Name: "CrozeniteCrystal"
+	Type: "IT_ETC"
+	Buy: 0
+	Sell: 0
+	Weight: 555
+	Def: 0
+	Refine: false
+	ViewSprite: 5313
+	Trade: {
+		notrade: true
+		nodrop: true
+		nostorage: false
+		nogstorage: false
+		nomail: true
+		noauction: true
+		noselltonpc: true
+	}
+	//Disabled: true // @TMWA
+},
+{
+	Id: 5314
+	AegisName: "GoldOre"
+	Name: "GoldOre"
+	Type: "IT_ETC"
+	Buy: 3200
+	Sell: 1600
+	Weight: 40
+	Def: 0
+	Refine: false
+	ViewSprite: 5314
+	//Disabled: true // @TMWA
+},
+{
+	Id: 5315
+	AegisName: "GoldIngot"
+	Name: "GoldIngot"
+	Type: "IT_ETC"
+	Buy: 40000
+	Sell: 4400
+	Weight: 1000
+	Def: 0
+	Refine: false
+	ViewSprite: 5315
+	Trade: {
+		notrade: true
+		nodrop: true
+		nostorage: false
+		nogstorage: false
+		nomail: true
+		noauction: true
+		noselltonpc: true
+	}
+	//Disabled: true // @TMWA
+},
+{
+	Id: 5316
+	AegisName: "BromenalOre"
+	Name: "BromenalOre"
+	Type: "IT_ETC"
+	Buy: 3200
+	Sell: 1600
+	Weight: 40
+	Def: 0
+	Refine: false
+	ViewSprite: 5316
+	//Disabled: true // @TMWA
+},
+{
+	Id: 5317
+	AegisName: "BromenalIngot"
+	Name: "BromenalIngot"
+	Type: "IT_ETC"
+	Buy: 30000
+	Sell: 3300
+	Weight: 1000
+	Def: 0
+	Refine: false
+	ViewSprite: 5317
+	Trade: {
+		notrade: true
+		nodrop: true
+		nostorage: false
+		nogstorage: false
+		nomail: true
+		noauction: true
+		noselltonpc: true
+	}
+	//Disabled: true // @TMWA
+},
+{
+	Id: 5318
+	AegisName: "BromenalDroplet"
+	Name: "BromenalDroplet"
+	Type: "IT_ETC"
+	Buy: 15000
+	Sell: 1500
+	Weight: 20
+	Def: 0
+	Refine: false
+	ViewSprite: 5318
+	Trade: {
+		notrade: true
+		nodrop: true
+		nostorage: false
+		nogstorage: false
+		nomail: true
+		noauction: true
+		noselltonpc: true
+	}
+	//Disabled: true // @TMWA
 },
 /* Chest Armor */
 {
