--- a/world/map/db/mob_db.conf
+++ b/world/map/db/mob_db.conf
@@ -148,6 +148,7 @@ mob_db: (
 		Dagger: 70
 		SharpKnife: 10
 		PileOfAsh: 500
+        BromenalDroplet: 20
 	}
 },
 {
@@ -1358,6 +1359,7 @@ mob_db: (
 		Dagger: 70
 		SharpKnife: 10
 		PileOfAsh: 500
+        BromenalDroplet: 30
 	}
 },
 {
@@ -1797,6 +1799,7 @@ mob_db: (
 		PileOfAsh: 5000
 		DarkCrystal: 1000
 		Skull: 500
+		GoldenTooth: 10
 		SkullMask: (1, "ODG_BASICSTAT")
 	}
 },
@@ -1845,6 +1848,7 @@ mob_db: (
 	Drops: {
 		DarkCrystal: 1000
 		Skull: 500
+		GoldenTooth: 10
 		SkullMask: (1, "ODG_BASICSTAT")
 	}
 },
@@ -3180,6 +3184,7 @@ mob_db: (
 		IronOre: 1000
 		PileOfAsh: 1000
 		Coal: 1000
+        BromenalDroplet: 100
 		TinyManaElixir: 500
 	}
 },
@@ -5543,6 +5548,7 @@ mob_db: (
 		DarkCrystal: 1000
 		Bone: 400
 		Skull: 300
+		DiseasedHeart: 250
 		IronPowder: 100
 		EnlighteningElixir: 1200
 		GoldenTooth: 20
@@ -7336,7 +7342,9 @@ mob_db: (
 		IronOre: 1500
 		TreasureKey: 1000
 		Coal: 300
-		SilverOre: 25
+		SilverOre: 30
+        BromenalOre: 20
+		GoldOre: 10
 	}
 },
 {
@@ -7889,9 +7897,11 @@ mob_db: (
 	DamageMotion: 480
 	Drops: {
 		IronPowder: 1200
-		IronOre: 1000
-		Coal: 800
-		SilverOre: 500
+		IronOre: 800
+		Coal: 1000
+		SilverOre: 150
+        BromenalOre: 100
+		GoldOre: 50
 	}
 },
 {
