--- a/world/map/db/mob_db.conf
+++ b/world/map/db/mob_db.conf
@@ -3184,6 +3184,7 @@ mob_db: (
 		IronOre: 1000
 		PileOfAsh: 1000
 		Coal: 1000
+		BromenalDroplet: 200
 		BromenalDroplet: 100
 		TinyManaElixir: 500
 	}
@@ -5606,7 +5607,7 @@ mob_db: (
 		SharpKnife: 200
 		CoinBag: 500
 		CasinoCoins: 500
-		RedApple: 750
+		GreenApple: 750
 	}
 },
 {
@@ -6100,7 +6101,7 @@ mob_db: (
 		SharpKnife: 200
 		CoinBag: 500
 		CasinoCoins: 500
-		RedApple: 750
+		GreenApple: 750
 	}
 },
 {
